// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arguments.hbs - {"singleQuote":false} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: false
                                                                                | printWidth
=====================================input======================================
<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aProp (and this.bProp (get bike "number" "message"))}}
/>

<GlimmerComponent
  class='medium'
  @autocomplete='off'
  @errors={{or this.aProp (and this.bProp (get bike 'number' 'message'))}}
/>

=====================================output=====================================
<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aProp (and this.bProp (get bike "number" "message"))}}
/>

<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aProp (and this.bProp (get bike "number" "message"))}}
/>
================================================================================
`;

exports[`arguments.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<GlimmerComponent
  class="medium"
  @autocomplete="off"
  @errors={{or this.aProp (and this.bProp (get bike "number" "message"))}}
/>

<GlimmerComponent
  class='medium'
  @autocomplete='off'
  @errors={{or this.aProp (and this.bProp (get bike 'number' 'message'))}}
/>

=====================================output=====================================
<GlimmerComponent
  class='medium'
  @autocomplete='off'
  @errors={{or this.aProp (and this.bProp (get bike 'number' 'message'))}}
/>

<GlimmerComponent
  class='medium'
  @autocomplete='off'
  @errors={{or this.aProp (and this.bProp (get bike 'number' 'message'))}}
/>
================================================================================
`;

exports[`attributes.hbs - {"singleQuote":false} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: false
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

<a href="/{{url}}/{{url}}"></a>
<a href='/{{url}}/{{url}}'></a>

<button class="padding width-{{locales.length}} {{if (has locale) "uk-button-primary"}}"></button>
<button class="padding width-{{locales.length}} {{if (has locale) 'uk-button-primary'}}"></button>
<button class='padding width-{{locales.length}} {{if (has locale) "uk-button-primary"}}'></button>
<button class='padding width-{{locales.length}} {{if (has locale) 'uk-button-primary'}}'></button>

=====================================output=====================================
<div title="My title"></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

<a href="/{{url}}/{{url}}"></a>
<a href="/{{url}}/{{url}}"></a>

<button
  class="padding width-{{locales.length}}
    {{if (has locale) "uk-button-primary"}}"
></button>
<button
  class="padding width-{{locales.length}}
    {{if (has locale) "uk-button-primary"}}"
></button>
<button
  class="padding width-{{locales.length}}
    {{if (has locale) "uk-button-primary"}}"
></button>
<button
  class="padding width-{{locales.length}}
    {{if (has locale) "uk-button-primary"}}"
></button>
================================================================================
`;

exports[`attributes.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

<a href="/{{url}}/{{url}}"></a>
<a href='/{{url}}/{{url}}'></a>

<button class="padding width-{{locales.length}} {{if (has locale) "uk-button-primary"}}"></button>
<button class="padding width-{{locales.length}} {{if (has locale) 'uk-button-primary'}}"></button>
<button class='padding width-{{locales.length}} {{if (has locale) "uk-button-primary"}}'></button>
<button class='padding width-{{locales.length}} {{if (has locale) 'uk-button-primary'}}'></button>

=====================================output=====================================
<div title='My title'></div>
<div title='My title'></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

<a href='/{{url}}/{{url}}'></a>
<a href='/{{url}}/{{url}}'></a>

<button
  class='padding width-{{locales.length}}
    {{if (has locale) 'uk-button-primary'}}'
></button>
<button
  class='padding width-{{locales.length}}
    {{if (has locale) 'uk-button-primary'}}'
></button>
<button
  class='padding width-{{locales.length}}
    {{if (has locale) 'uk-button-primary'}}'
></button>
<button
  class='padding width-{{locales.length}}
    {{if (has locale) 'uk-button-primary'}}'
></button>
================================================================================
`;

exports[`string-literals.hbs - {"singleQuote":false} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: false
                                                                                | printWidth
=====================================input======================================
{{"abc"}}
{{'abc'}}
{{" \\" \\" ' more double quote than single quote "}}
{{' \\' \\' " more single quote than double quote '}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}

=====================================output=====================================
{{"abc"}}
{{"abc"}}
{{' " " \\' more double quote than single quote '}}
{{" ' ' \\" more single quote than double quote "}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}
================================================================================
`;

exports[`string-literals.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
{{"abc"}}
{{'abc'}}
{{" \\" \\" ' more double quote than single quote "}}
{{' \\' \\' " more single quote than double quote '}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}

=====================================output=====================================
{{'abc'}}
{{'abc'}}
{{' " " \\' more double quote than single quote '}}
{{" ' ' \\" more single quote than double quote "}}
{{' " \\' \\" \\\\ '}}
{{" \\" \\' ' \\\\ "}}
================================================================================
`;
